# stm32f103_blue_pill

./: .mxproject  CMakeLists.txt  Makefile  stm32f103_blue_pill.code-workspace  stm32f103_blue_pill.ioc
Core/Inc/: FreeRTOSConfig.h  stm32f1xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  stm32f1xx_it.c
Firmware/: blinking_task.c  syscalls.c
USB_DEVICE/App/: usbd_desc.c
openocd/: blue_pill.cfg  stm32f103c8.cfg
